--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="template_styles.css">
+    <link rel="stylesheet" href="custom_styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
@@ -21,7 +22,8 @@
             <!-- lg: large breakpoint; navbar-dark: make the bg dark & text light -->
             <div class="container">
                 <a href="index.html" class="navbar-brand">
-                    <img src="img/droplet.png" alt="Logo: Water Droplet" class="d-inline-block align-text-top w-50">
+                    <img src="img/logo.png" alt="Logo: Two Headed Planaria" id="site-icon"
+                        class="d-inline-block align-text-top w-50">
                 </a>
 
                 <!-- Hamburger Icon -->
@@ -35,15 +37,12 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a href="authors.html" class="nav-link hover-underline-animation nbMenuItem">Authors</a>
-                            <!-- TODO -->
                         </li>
                         <li class="nav-item">
                             <a href="procedure.html" class="nav-link hover-underline-animation nbMenuItem">Procedure</a>
-                            <!-- TODO -->
                         </li>
                         <li class="nav-item">
                             <a href="results.html" class="nav-link hover-underline-animation nbMenuItem">Results</a>
-                            <!-- TODO -->
                         </li>
                     </ul>
                 </div>
@@ -55,15 +54,16 @@
             <!-- p-2: padding -->
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6 p-0 d-flex align-items-center">
-                        <img src="img/img-5509.jpg" alt="Shark River" class="img-fluid">
-                        <!-- img-fluid: won't expand img larger than container, scale down if needed -->
-                    </div>
-                    <div class="col-sm-6 p-0 d-flex align-items-center">
+                    <div class="col-sm-9 p-0 d-flex align-items-center">
                         <div class="container">
-                            <h1 class="display-4">Water Temperature Near Avon, NJ (2021-2021)</h1>
-                            <h2>Building a site with Bootstrap 5 Demo</h2>
+                            <h1 class="display-4">Shaken Not Stirred</h1>
+                            <h2><em>The Effect of Vibration on Planarian Regeneration Speed</em></h2>
                         </div>
+                    </div>
+                    <div class="col-sm-3 p-0 d-flex align-items-center">
+                        <img src="img/vibration-table.png" alt="Vibration table with petri dishes on top"
+                            class="img-fluid">
+                        <!-- img-fluid: won't expand img larger than container, scale down if needed -->
                     </div>
                 </div>
             </div>
@@ -72,31 +72,42 @@
         <!-- Overview -->
         <section class="overview text-dark p-2 text-left">
             <div class="container">
-                <div class="row">
+                <div class="row align-items-center">
                     <div class="col-sm-4 p-3">
-                        <img src="img/19418.jpeg" alt="Water Temperature Graph" class="img-fluid">
+                        <img src="img/waiting-list-by-organ-sept-2024.jpg"
+                            alt="Number of patients on organ donation waiting list" class="img-fluid">
                     </div>
                     <div class="col-sm-8 p-3">
                         <h1 class="ovPadLeft">Background</h1>
-                        <p class="lead overview-font ovPadLeft">textypoo</p>
+                        <ul class="lead overview-font ov-bullet-pad-left">
+                            <li>There is a large demand for organ transplants in the United States and around the globe.
+                            </li>
+                            <li>When one of a person’s organs fails, it often means that</li>
+                            <li>they need a replacement from a living or very recently dead human being.</li>
+                            <li>Currently, there are not enough donated organs to keep up with demand.</li>
+                            <ul>
+                                <li>>100,000 patients in the United States are on the waiting list</li>
+                                <li>13 patients die each day while waiting for a donation</li>
+                            </ul>
+                            <li>A method to generate new organs for use in transplants without a donor would be
+                                lifesaving.</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row align-items-center">
                     <div class="col-sm-8 p-3">
                         <h1 class="ovPadRight">Rationale</h1>
-                        <p class="lead overview-font ovPadRight">textypoo</p>
+                        <ul class="lead overview-font ov-bullet-pad-left">
+                            <li>Studying the regeneration methods of planaria as well as other models can help inform
+                                researchers when designing methods for humans</li>
+                            <li>The data collected in this study hopefully has expanded the data known about this
+                                organism, and in the study of regenerative tissue.</li>
+                            <li>Cheap and easy methods of accelerating regeneration (such as vibration) would be
+                                invaluable when regeneration becomes possible large-scale.</li>
+                        </ul>
                     </div>
                     <div class="col-sm-4 p-3">
-                        <img src="img/watermap.jpg" alt="Global Map of Water Temperatures" class="img-fluid">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4 p3">
-                        <img src="img/phytoplankton-pnas.jpg" alt="Phytoplankton" class="img-fluid">
-                    </div>
-                    <div class="col-sm-8 p3">
-                        <h1 class="ovPadLeft">Research Practicum</h1>
-                        <p class="lead overview-font ovPadLeft">textypoo</p>
+                        <img src="img/planaria-tank.png" alt="Container of planaria" class="img-fluid">
                     </div>
                 </div>
 
@@ -106,7 +117,7 @@
         <!-- Footer (require a Bootstrap icon) -->
         <footer class="p-5 footer text-light text-center position-relative">
             <div class="container">
-                <p class="lead">Copyright &copy; SE 2025 Bootstrap Demo</p>
+                <p class="lead">Copyright &copy; 2025: Alex Mazurczyk / High Technology High School</p>
                 <a href="#" class="position-absolute bottom-0 end-0 p-5">
                     <i class="bi bi-arrow-up-circle h2 icon-white"></i>
                 </a>
