Finish authors.html

--- a/authors.html
+++ b/authors.html
@@ -22,7 +22,8 @@
             <!-- lg: large breakpoint; navbar-dark: make the bg dark & text light -->
             <div class="container">
                 <a href="index.html" class="navbar-brand">
-                    <img src="img/droplet.png" alt="Logo: Water Droplet" class="d-inline-block align-text-top w-50">
+                    <img src="img/logo.png" alt="Logo: Two Headed Planaria" id="site-icon"
+                        class="d-inline-block align-text-top w-50">
                 </a>
 
                 <!-- Hamburger Icon -->
@@ -35,13 +36,13 @@
                     <!-- Links to hamburger menu button -->
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a href="authors.html" class="hover-underline-animation nbMenuItem">Authors</a>
+                            <a href="authors.html" class="nav-link hover-underline-animation nbMenuItem">Authors</a>
                         </li>
                         <li class="nav-item">
-                            <a href="procedure.html" class="hover-underline-animation nbMenuItem">Procedure</a>
+                            <a href="procedure.html" class="nav-link hover-underline-animation nbMenuItem">Procedure</a>
                         </li>
                         <li class="nav-item">
-                            <a href="results.html" class="hover-underline-animation nbMenuItem">Results</a>
+                            <a href="results.html" class="nav-link hover-underline-animation nbMenuItem">Results</a>
                         </li>
                     </ul>
                 </div>
@@ -56,55 +57,45 @@
                 <hr><br> <!-- Horizontal line, line break-->
 
                 <!-- Card organized in 2x2 tbl format -->
-                <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="row row-cols-3 row-cols-md-1 g-4">
                     <div class="col">
                         <div class="card about">
-                            <img src="img/woman1.jpg" alt="Name 1" class="card-img-top">
+                            <img src="img/alex-mazurczyk.png" alt="Photo of Alex" class="card-img-top">
                             <div class="card-body">
-                                <h4 class="card-title">Student Name</h4>
-                                <h5>Class: BME</h5>
-                                <p class="card-text">Describe (in detail) the contributions that this person made to the
-                                    project</p>
+                                <h4 class="card-title">Alex Mazurczyk</h4>
+                                <h5>HTHS Student '27</h5>
+                                <p class="card-text">Alex was the Principle Investigator of the project. He conducted
+                                    all experiments and wrote the paper under guidance of his mentors</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="card about">
-                            <img src="img/man1.png" alt="Name 2" class="card-img-top">
+                            <img src="img/mrqueenan.png" alt="Photo of Mr. Queenan" class="card-img-top">
                             <div class="card-body">
-                                <h4 class="card-title">Student Name</h4>
-                                <h5>Class: BME</h5>
-                                <p class="card-text">Describe (in detail) the contributions that this person made to the
-                                    project</p>
+                                <h4 class="card-title">Mr. Queenan</h4>
+                                <h5>HTHS Staff, Honors Biology Teacher</h5>
+                                <p class="card-text">Mr. Queenan was Alex's assigned mentor during Research Practicum.
+                                    He offered guidance, answered questions, and set goals for the project.</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="card about">
-                            <img src="img/woman2.jpg" alt="Name 3" class="card-img-top">
+                            <img src="img/drellsworth.png" alt="Name 3" class="card-img-top">
                             <div class="card-body">
-                                <h4 class="card-title">Student Name</h4>
-                                <h5>Class: SE</h5>
-                                <p class="card-text">Describe (in detail) the contributions that this person made to the
-                                    project</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="card about">
-                            <img src="img/man2.jpg" alt="Name 2" class="card-img-top">
-                            <div class="card-body">
-                                <h4 class="card-title">Student Name</h4>
-                                <h5>Class: BME</h5>
-                                <p class="card-text">Describe (in detail) the contributions that this person made to the
-                                    project</p>
+                                <h4 class="card-title">Dr. Ellsworth</h4>
+                                <h5>HTHS Staff, AP Biology Teacher</h5>
+                                <p class="card-text">Dr. Ellsworth also helped mentor Alex throughout Research
+                                    Practicum. She offered guidance, answered questions, and make resources available
+                                    for lab use.</p>
                             </div>
                         </div>
                     </div>
                 </div>
+                <br>
             </div>
         </section>
 
