shrank images to 9vw

--- a/procedure.html
+++ b/procedure.html
@@ -64,7 +64,8 @@
 
                 <hr><br>
                 <!-- Procedure Table -->
-                <table class="table table-hover text-center table-light table-bordered border-dark-subtle">
+                <table id="procedure-tbl"
+                    class="table table-hover text-center table-light table-bordered border-dark-subtle">
                     <thead>
                         <tr class="table-primary">
                             <th>
@@ -73,12 +74,12 @@
                             <th>
                                 <h3>Description</h3>
                             </th>
-                            <th>
+                            <th id="hi">
                                 <h3>Image</h3>
                             </th>
                         </tr>
                     </thead>
-                    <tbody id="procedure-tbl" class="table-group-divider">
+                    <tbody class="table-group-divider">
                         <tr class="align-middle">
                             <th scope="row" class="table-secondary">
                                 <h3>1</h3>
@@ -87,7 +88,7 @@
                                 <h3 class="howTo">Obtain 24 planaria</h3>
                             </td>
                             <td class="text-center"><img src="img/planaria-tank-top.png" alt="Basin of planaria"
-                                    class="img-fluid"></td>
+                                    class="my-image-class-pls-work"></td>
                         </tr>
                         <tr class="align-middle">
                             <th scope="row" class="table-secondary">
@@ -97,7 +98,7 @@
                                 <h3 class="howTo">Cut all planaria into halves, store in pairs in petri dishes</h3>
                             </td>
                             <td class="text-center"><img src="img/cutting-planaria.png"
-                                    alt="Planaria being cut, put into dishes" class="img-fluid"></td>
+                                    alt="Planaria being cut, put into dishes" class="my-image-class-pls-work"></td>
                         </tr>
                         <tr class="align-middle">
                             <th scope="row" class="table-secondary">
@@ -107,7 +108,8 @@
                                 <h3 class="howTo">Measure each planaria half</h3>
                             </td>
                             <td class="text-center"><img src="img/planaria-measure-1.png"
-                                    alt="Petri dish containing planaria on top of ruler" class="img-fluid"></td>
+                                    alt="Petri dish containing planaria on top of ruler"
+                                    class="my-image-class-pls-work"></td>
                         </tr>
                         <tr class="align-middle">
                             <th scope="row" class="table-secondary">
@@ -117,7 +119,7 @@
                                 <h3 class="howTo">Put on vibration table for 5 days at varying strength</h3>
                             </td>
                             <td class="text-center"><img src="img/vibration-table.png"
-                                    alt="Vibration table with petri dishes on top" class="img-fluid"></td>
+                                    alt="Vibration table with petri dishes on top" class="my-image-class-pls-work"></td>
                         </tr>
                         <tr class="align-middle">
                             <th scope="row" class="table-secondary">
@@ -127,7 +129,8 @@
                                 <h3 class="howTo">Remeasure planaria, determine % growth</h3>
                             </td>
                             <td class="text-center"><img src="img/planaria-measure-2.png"
-                                    alt="Petri dish containing planaria on top of ruler" class="img-fluid"></td>
+                                    alt="Petri dish containing planaria on top of ruler"
+                                    class="my-image-class-pls-work"></td>
                         </tr>
                         <tr class="align-middle">
                             <th scope="row" class="table-secondary">
@@ -137,7 +140,7 @@
                                 <h3 class="howTo">Make pretty graphs with Python!</h3>
                             </td>
                             <td class="text-center"><img src="img/accel-graph.png" alt="Graph of acceleration vs. time"
-                                    class="img-fluid"></td>
+                                    class="my-image-class-pls-work"></td>
                         </tr>
                     </tbody>
                 </table>
