changed wide breakpoint to 1400px for authors.html cards

--- a/authors.html
+++ b/authors.html
@@ -59,7 +59,7 @@
                 <hr><br> <!-- Horizontal line, line break-->
 
                 <!-- Card organized in 2x2 tbl format -->
-                <div class="row row-cols-3 row-cols-md-1 g-4">
+                <div class="row row-cols-1 lg-bp-3-columns g-4">
                     <div class="col">
                         <div class="card about">
                             <img src="img/alex-mazurczyk.png" alt="Photo of Alex" class="card-img-top">
