Fix comment (2x2 table --> 1x3 table)

--- a/authors.html
+++ b/authors.html
@@ -58,7 +58,7 @@
                 <h1 class="text-center about-team">About the Team</h1>
                 <hr><br> <!-- Horizontal line, line break-->
 
-                <!-- Card organized in 2x2 tbl format -->
+                <!-- Card organized in 3x1 or 1x3 tbl format -->
                 <div class="row row-cols-1 lg-bp-3-columns g-4">
                     <div class="col">
                         <div class="card about">
