--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         <section class="overview text-dark p-2 text-left">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-sm-4 p-3">
+                    <div class="col-md-4 p-3">
                         <img src="img/waiting-list-by-organ-sept-2024.jpg"
                             alt="Number of patients on organ donation waiting list" class="img-fluid">
                     </div>
-                    <div class="col-sm-8 p-3">
+                    <div class="col-md-8 p-3">
                         <h1 class="ovPadLeft">Background</h1>
                         <ul class="lead overview-font ov-bullet-pad-left">
                             <li>There is a large demand for organ transplants in the United States and around the globe.
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-sm-8 p-3">
+                    <div class="col-md-8 p-3">
                         <h1 class="ovPadRight">Rationale</h1>
                         <ul class="lead overview-font ov-bullet-pad-left">
                             <li>Studying the regeneration methods of planaria as well as other models can help inform
@@ -108,7 +108,7 @@
                                 invaluable when regeneration becomes possible large-scale.</li>
                         </ul>
                     </div>
-                    <div class="col-sm-4 p-3">
+                    <div class="col-md-4 p-3">
                         <img src="img/planaria-tank.png" alt="Container of planaria" class="img-fluid">
                     </div>
                 </div>
