fix small grammar mistake

--- a/authors.html
+++ b/authors.html
@@ -91,7 +91,7 @@
                                 <h4 class="card-title">Dr. Ellsworth</h4>
                                 <h5>HTHS Staff, AP Biology Teacher</h5>
                                 <p class="card-text">Dr. Ellsworth also helped mentor Alex throughout Research
-                                    Practicum. She offered guidance, answered questions, and make resources available
+                                    Practicum. She offered guidance, answered questions, and made resources available
                                     for lab use.</p>
                             </div>
                         </div>
