--- a/results.html
+++ b/results.html
@@ -1,99 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Results - Shaken Not Stirred - Vibration & Planaria Regeneration
-    </title>
-    <link rel="icon" href="img/favicon.png" type="image/png" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-    <link rel="stylesheet" href="template_styles.css" />
-    <link rel="stylesheet" href="custom_styles.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    Results - Shaken Not Stirred - Vibration & Planaria Regeneration
+  </title>
+  <link rel="icon" href="img/favicon.png" type="image/png" />
 
-  <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark nb-background-color">
-      <!-- lg: large breakpoint; navbar-dark: make the bg dark & text light -->
-      <div class="container">
-        <a href="index.html" class="navbar-brand">
-          <img
-            src="img/logo.png"
-            alt="Logo: Two Headed Planaria"
-            id="site-icon"
-            class="d-inline-block align-text-top w-50" />
-        </a>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+  <link rel="stylesheet" href="template_styles.css" />
+  <link rel="stylesheet" href="custom_styles.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
 
-        <!-- Hamburger Icon -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navmenu">
-          <span class="navbar-toggler-icon"> </span>
-        </button>
-
-        <!-- Collapsable navbar menu with custom hover underline -->
-        <div class="collapse navbar-collapse" id="navmenu">
-          <!-- Links to hamburger menu button -->
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a
-                href="authors.html"
-                class="nav-link hover-underline-animation nbMenuItem"
-                >Authors</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                href="procedure.html"
-                class="nav-link hover-underline-animation nbMenuItem"
-                >Procedure</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                href="results.html"
-                class="nav-link hover-underline-animation nbMenuItem"
-                >Results</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark nb-background-color">
+    <!-- lg: large breakpoint; navbar-dark: make the bg dark & text light -->
     <div class="container">
-      <br /><br />
-      <h1 class="text-center">Website still under development!</h1>
-      <br />
-      <h2 class="text-center"><a href="index.html">Go back home</a></h2>
-    </div>
+      <a href="index.html" class="navbar-brand">
+        <img src="img/logo.png" alt="Logo: Two Headed Planaria" id="site-icon"
+          class="d-inline-block align-text-top w-50" />
+      </a>
 
-    <footer
-      class="p-5 footer text-light text-center position-fixed bottom-0 w-100">
-      <div class="container">
-        <p class="lead">
+      <!-- Hamburger Icon -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+        <span class="navbar-toggler-icon"> </span>
+      </button>
+
+      <!-- Collapsable navbar menu with custom hover underline -->
+      <div class="collapse navbar-collapse" id="navmenu">
+        <!-- Links to hamburger menu button -->
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a href="authors.html" class="nav-link hover-underline-animation nbMenuItem">Authors</a>
+          </li>
+          <li class="nav-item">
+            <a href="procedure.html" class="nav-link hover-underline-animation nbMenuItem">Procedure</a>
+          </li>
+          <li class="nav-item">
+            <a href="results.html" class="nav-link hover-underline-animation nbMenuItem">Results</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <br /><br />
+    <h1 class="text-center">Website still under development!</h1>
+    <br />
+    <h2 class="text-center"><a href="index.html">Go back home</a></h2>
+  </div>
+
+  <footer class="p-5 footer text-light text-center position-fixed bottom-0 w-100">
+    <div class="container">
+      <p class="lead">
           Copyright &copy; 2025: Alex Mazurczyk / High Technology High School
         </p>
-        <a href="#" class="position-absolute bottom-0 end-0 p-5">
-          <i class="bi bi-arrow-up-circle h2 icon-white"></i>
-        </a>
-      </div>
-    </footer>
-  </body>
+      <a href="#" class="position-absolute bottom-0 end-0 p-5">
+        <i class="bi bi-arrow-up-circle h2 icon-white"></i>
+      </a>
+    </div>
+  </footer>
+</body>
+
 </html>
