--- a/results.html
+++ b/results.html
@@ -54,15 +54,17 @@
     </div>
   </nav>
 
+  <br>
+  <h1 class="text-center about-team">Results</h1>
+  <hr>
+
   <section class="container d-flex bg-light rounded-4" id="chart-wrapper">
     <canvas id="barChart"></canvas>
   </section>
-
-  <footer class="p-5 footer text-light text-center position-fixed bottom-0 w-100">
+  <!-- Footer -->
+  <footer class="p-5 footer text-light text-center position-relative">
     <div class="container">
-      <p class="lead">
-          Copyright &copy; 2025: Alex Mazurczyk / High Technology High School
-        </p>
+      <p class="lead">Copyright &copy; SE 2025 Bootstrap Demo </p>
       <a href="#" class="position-absolute bottom-0 end-0 p-5">
         <i class="bi bi-arrow-up-circle h2 icon-white"></i>
       </a>
