Add std. dev caption

--- a/results.html
+++ b/results.html
@@ -57,10 +57,14 @@
   <br>
   <h1 class="text-center about-team">Results</h1>
   <hr>
-
-  <section class="container d-flex bg-light rounded-4" id="chart-wrapper">
-    <canvas id="barChart"></canvas>
+  <section id="chart-with-text">
+    <div class="container d-flex bg-light rounded-4" id="chart-wrapper">
+      <canvas id="barChart"></canvas>
+    </div>
+    <em>The standard deviations of the data were: 23.3%, 25.1%, 20.5%, 37.2%, 13.7%, 17.2%, 12.3%, and 17.7%
+      respectively</em>
   </section>
+  <br><br>
   <!-- Footer -->
   <footer class="p-5 footer text-light text-center position-relative">
     <div class="container">
